fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 	width: 100%;
 	color: white;
 	font-weight: bold;
+	font-family: "Lato", sans-serif;
 }
 
 .container {
@@ -48,7 +49,6 @@ header {
 }
 
 .tagline {
-	align-self: flex-start;
 	padding-bottom: 0.5em;
 	font-size: 3em;
 	text-align: center;
@@ -70,7 +70,7 @@ hr {
 	width: 100%;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 768px) {
 
 	h1 {
 		text-align:  center;
@@ -82,6 +82,11 @@ hr {
 
 	header {
 		flex-direction: column;
+	}
+
+	.nav {
+		align-self: center;
+		padding: 0;
 	}
 
 	.call-to-action {
